# rs_tg_nostr

./: .env.example  CLAUDE.md  Cargo.toml  README.md  README_zh.md
docs/superpowers/plans/: 2026-03-25-nip42-auth-logging.md  2026-03-25-nostr-sdk-upgrade.md  2026-03-25-rs-tg-nostr-impl.md
docs/superpowers/specs/: 2026-03-25-nip42-auth-logging-design.md  2026-03-25-nostr-sdk-upgrade-design.md  2026-03-25-rs-tg-nostr-design.md
src/: app.rs  config.rs  error.rs  keys.rs  lib.rs  main.rs  nostr.rs  state.rs  telegram.rs  transport.rs
tests/: bridge_test.rs  keys_test.rs  nostr_test.rs  telegram_test.rs
